Fix breadcrumbs being on top of title on small screens

--- a/Themes/Adminlte/assets/css/asgard.css
+++ b/Themes/Adminlte/assets/css/asgard.css
@@ -106,16 +106,20 @@ footer.main-footer p.text-muted {
 }
 .content .media-breadcrumb .el-breadcrumb,
 .content .content-header .el-breadcrumb {
-  float: right;
   background: transparent;
   margin-top: 0;
   margin-bottom: 0;
   font-size: 12px;
   padding: 7px 5px;
-  position: absolute;
-  top: 15px;
-  right: 10px;
   border-radius: 2px;
+}
+@media (min-width: 992px) {
+  .content .media-breadcrumb .el-breadcrumb,
+  .content .content-header .el-breadcrumb {
+    position: absolute;
+    top: 15px;
+    right: 10px;
+  }
 }
 .el-tabs__header .error {
   color: #dd4b39;
